...
                        <subviews>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="woT-fW-8az">
                                <rect key="frame" x="20" y="646" width="130" height="70"/>
                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
                                <color key="backgroundColor" systemColor="secondarySystemBackgroundColor" red="0.94901960780000005" green="0.94901960780000005" blue="0.96862745100000003" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                <fontDescription key="fontDescription" type="system" pointSize="24"/>
                                <state key="normal" title="New Game"/>
                                <connections>
                                    <action selector="newGameAction:" destination="FwV-rD-nAO" eventType="touchUpInside" id="PGu-Dz-vAb"/>
                                </connections>
                            </button>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="k6Q-0s-ykg">
                                <rect key="frame" x="264" y="646" width="130" height="70"/>
...
                            <constraint firstItem="WW9-CC-SRI" firstAttribute="centerX" secondItem="52b-x8-Brh" secondAttribute="centerX" id="PW3-bK-FGx"/>
                            <constraint firstItem="WW9-CC-SRI" firstAttribute="leading" secondItem="52b-x8-Brh" secondAttribute="leading" priority="750" constant="10" id="get-5p-pou"/>
                        </constraints>
                        <viewLayoutGuide key="safeArea" id="52b-x8-Brh"/>
                    </view>
                    <navigationItem key="navigationItem" id="PhH-sb-B7i">
                        <barButtonItem key="rightBarButtonItem" title="Solve" id="ift-SV-29h">
                            <connections>
                                <segue destination="DwS-6A-BBb" kind="show" id="ywk-37-GKj"/>
                            </connections>
                        </barButtonItem>
                    </navigationItem>
                    <connections>
...
                            <constraint firstItem="12W-wM-C4K" firstAttribute="leading" secondItem="GR2-zd-ijy" secondAttribute="leading" constant="20" id="gnr-bc-eJX"/>
                            <constraint firstItem="12W-wM-C4K" firstAttribute="top" secondItem="GR2-zd-ijy" secondAttribute="top" constant="10" id="mHI-NK-Il4"/>
                        </constraints>
                        <viewLayoutGuide key="safeArea" id="GR2-zd-ijy"/>
                    </view>
                    <navigationItem key="navigationItem" id="Eqf-By-UdO">
                        <barButtonItem key="rightBarButtonItem" title="Visualize" id="QSc-nD-5my">
                            <connections>
                                <segue destination="cWW-MQ-ecb" kind="show" id="bB2-xY-YJm"/>
                            </connections>
                        </barButtonItem>
                    </navigationItem>
                    <connections>
...
                        <subviews>
                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="C2c-kv-a0d">
                                <rect key="frame" x="20" y="646" width="130" height="70"/>
                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
                                <color key="backgroundColor" systemColor="secondarySystemBackgroundColor" red="0.94901960780000005" green="0.94901960780000005" blue="0.96862745100000003" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                <fontDescription key="fontDescription" type="system" pointSize="24"/>
                                <state key="normal" title="Start"/>
                                <connections>
                                    <action selector="startButtonAction:" destination="cWW-MQ-ecb" eventType="touchUpInside" id="x7Q-1b-Bro"/>
                                </connections>
                            </button>
                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="4VS-QU-yvl">
                                <rect key="frame" x="264" y="646" width="130" height="70"/>
...
