...
        set(newValue) {
            boards[index] = newValue
        }
    }
    
    init() {
        boards.append(Board(7, 7, 3, 3, "English", [
            0, 0, 1, 1, 1, 0, 0,
            0, 0, 1, 1, 1, 0, 0,
            1, 1, 1, 1, 1, 1, 1,
            1, 1, 1, 1, 1, 1, 1,
            1, 1, 1, 1, 1, 1, 1,
            0, 0, 1, 1, 1, 0, 0,
...
