...
    var selectedIndexPath = 0
    var previousMode = "light"
        
    override func viewDidLoad() {
        super.viewDidLoad()
        
        navigationItem.title = "Boards"
        let backItem = UIBarButtonItem()
        backItem.title = "Boards"
        navigationItem.backBarButtonItem = backItem
        
        
        tableView.dragInteractionEnabled = true
...
